# r7-insightidr-mcp

./: CLAUDE.md  README.md  mise.toml  pyproject.toml  server.py
