[project]
name = "r7-insightidr-mcp"
version = "0.1.0"
description = "MCP server for Rapid7 InsightIDR investigation management"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["server.py"]
